# cookiecutter-pyservice

./: .editorconfig  .gitignore  README.md  cookiecutter.json
{{ cookiecutter.project_name.lower() }}-service/: .dockerignore  .editorconfig  .flaskenv  .gitignore  Makefile  README.md  docker-compose.provision.yaml  docker-compose.test.yaml  docker-compose.yaml  pyproject.toml  settings.yaml  setup.cfg
{{ cookiecutter.project_name.lower() }}-service/infra/: init_db.sql  uwsgi.yaml
{{ cookiecutter.project_name.lower() }}-service/infra/docker/: Dockerfile  entrypoint.sh
{{ cookiecutter.project_name.lower() }}-service/infra/kube/base/: config.yml  deployment.yml  ingress.yml  kustomization.yaml  secret.yaml  service.yml  service_account.yaml
{{ cookiecutter.project_name.lower() }}-service/infra/kube/overlays/production/: config.yml  deployment_patch.yml  ingress_patch.yml  kustomization.yaml  network_policy.yml
{{ cookiecutter.project_name.lower() }}-service/{{ cookiecutter.project_slug }}/: __init__.py  commands.py  config.py  metrics.py  middleware.py  wsgi.py
{{ cookiecutter.project_name.lower() }}-service/{{ cookiecutter.project_slug }}/blueprints/: __init__.py
